--- a/README
+++ b/README
@@ -1,14 +1,18 @@
 Chat with Node.js and jQuery is a web application developed entirely with node.js that allow users to chat in a web interface. No need to apache or databases.
 
 Requirements:
--nodejs
--socket.io
+- Nodejs
+- socket.io (npm install socket.io)
+- Socket IO client (npm install socket.io-client)
 
 How to install:
-1.Uncompress the rar file in any location.
-2.Open index.html and edit the lines:
-      var ipServidorChatNodeJs = '192.168.1.4'; 
-      var portServidorChatNodeJs = '8889';     
-3.Then you must do the same in server.js (lines 44, 46 and 51).
-4.Open a console and run server.js (node server.js).
-5.Now if you open a browser and type the location of your app, you will see it working.      
+1. Clone the repo in any location.
+2. Open index.html and edit the lines:
+      var ipServidorChatNodeJs = '192.168.1.4'; //Ip address for the created web server (localhost for local usage)
+      var portServidorChatNodeJs = '8889'; //Port for the chat server (optional)
+      var portServidorWebNodeJs = '8888';  //Port for the web server (optional)
+3. Then you must do the same in server.js (lines 44, 46 and 51).
+4. Open a console and run the following command: 
+	$ node server.js
+5. Open a browser and type the location of your app (e.g. http://localhost:8888/index.html).
+6. Enjoy!
